# Zappy

./: .gitignore  CMakeLists.txt  Doxyfile  Keynote.pptx  LICENSE  Makefile  README.md  commitlint.config.cjs  eval.py  mkdocs.yml  start_ia.sh  vcpkg.json  zappy_ai  zappy_ai.py  zappy_gui  zappy_server
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_docs.yml  release.yml
ai/: AI_OVERVIEW.md  Makefile  pyproject.toml  run_ai_test.sh
ai/baseline/: __init__.py  _bundle.py  ai.py  behaviors.py  brain.py  census.py  cli.py  constants.py  gather.py  manifest.py  models.py  movement.py  net.py  protocol.py  sensing.py  shims.py  zappy_ai_baseline.py
ai/include/zappy/protocol/: ai_protocol.hpp
ai/rl/: eval.py  setup_venv.sh  train.py
ai/tests/: test_reward.py
ai/zappy_train/: __init__.py  encoding.py
ai/zappy_train/env/: __init__.py
ai_cpp/: CMakeLists.txt  README.md
ai_cpp/include/zappy/ai/: agent.hpp
ai_cpp/src/: args.cpp  args.hpp  main.cpp
ai_cpp/tests/: test_args.cpp
ai_python/: README.md
ai_python/tests/: test_env_shapes.py
ai_python/zappy_train/: encoding.py  reward.py
ai_python/zappy_train/env/: pettingzoo_env.py
ai_python/zappy_train/training/: train_ppo.py
cmake/: compile_options.cmake  sanitizers.cmake
docs/: 00_executive_summary.md  AI_OVERVIEW.md  gui_raylib.md  index.md  protocols.md  server.md  uml_overview.md
docs/01_architecture/: 01_overview.md  02_server.md  03_gui_raylib.md  03_gui_vulkan.md  04_ai_rl.md  05_simulator.md  06_protocols.md  07_monorepo_structure.md  08_uml_overview.md
docs/02_team/: 01_roles.md  02_raci.md  03_responsibilities.md
docs/03_process/: 01_gitflow.md  02_ci_cd.md  03_pr_rules.md  04_adrs.md  05_sprint_cadence.md  06_precommit.md
docs/04_quality/: 01_definition_of_done.md  02_testing_strategy.md  03_code_standards.md  04_performance_targets.md
docs/05_risks/: 01_top_10_risks.md  02_mitigation_plan.md
docs/06_calendar/: 00_overview.md
docs/06_calendar/sprints/: sprint_1_w1_foundations.md  sprint_2_w2_core.md  sprint_3_w3_features.md  sprint_4_w4_polish.md
docs/07_calendar_per_person/: P1_server_lead.md  P2_server_dev.md  P3_gui_lead_vulkan.md  P4_gui_dev_ux.md  P5_ai_lead_rl.md  P6_ai_dev_sim_devops.md
docs/08_deliverables/: 01_final_deliverables.md  02_demo_script.md  03_soutenance_slides_plan.md  04_video_demo_plan.md
docs/09_appendix/: 01_useful_commands.md  02_dependencies.md  03_references.md
docs/adrs/: 000-template.md  001-server-language-cpp.md  006-test-framework-catch2.md
docs/doc/: PLAN.md
docs/superpowers/plans/: 2026-07-08-gui-visual-overhaul.md  2026-07-08-keynote-refonte.md
docs/superpowers/specs/: 2026-07-08-gui-visual-overhaul-design.md  2026-07-08-keynote-refonte-design.md  2026-07-09-user-facing-output-polish-design.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
gui/: CMakeLists.txt  README.md  aiPlayer.hpp  environment.cpp  environment.hpp  gameMap.cpp  gameMap.hpp  gfxTypes.hpp  groundCover.cpp  groundCover.hpp  guiState.hpp  interface.cpp  interface.hpp  main.cpp  netClient.cpp  netClient.hpp  particles.cpp  particles.hpp  protocolParser.cpp  protocolParser.hpp  raylibWrapper.cpp  raylibWrapper.hpp  tvServer.cpp  tvServer.hpp
gui/assets/: README.md
gui/assets/shaders/: bloom.fs  bloom_combine.fs  bloom_extract.fs  celestial.fs  floor.fs  floor.vs  lighting.fs  lighting.vs  lighting_instancing.vs  post_composite.fs  sky_procedural.fs
gui/include/zappy/gui/net/: gui_client.hpp
gui/include/zappy/gui/scene/: scene.hpp
gui/include/zappy/gui/ui/: hud.hpp
gui/shaders/: triangle.frag  triangle.vert
gui/src/: main.cpp
gui/src/gui2d/: main.cpp  net.cpp  net.hpp  parser.cpp  parser.hpp  world.hpp
gui/src/renderer/: vulkan_app.cpp
gui/tests/: test_environment.cpp  test_gui_protocol.cpp  test_tv_server.cpp
gui3d/: Makefile  aiPlayer.hpp  gameMap.cpp  gameMap.hpp  gfxTypes.hpp  guiState.hpp  interface.cpp  interface.hpp  main.cpp  netClient.hpp  protocolParser.cpp  raylibWrapper.cpp  raylibWrapper.hpp  zappy_gui3d
gui3d/assets/: monster_green.glb  monster_pink.glb
gui3d/assets/shaders/: lighting.fs  lighting.vs  skybox.fs  skybox.vs
gui3d/graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
gui3d/graphify-out/cache/: stat-index.json
presentation/: build_pptx.py  render.sh  slide01.html  slide02.html  slide03.html  slide04.html  slide05.html  slide06.html  slide07.html  slide08.html  slide09.html  slide10.html  slide11.html  slide13.html  slide14.html  slide15.html  theme.css
protocol/: CMakeLists.txt
protocol/include/zappy/protocol/: ai_protocol.hpp  gui_protocol.hpp  protocol.hpp
protocol/tests/: test_protocol.cpp
reference/: README.md
server/: CMakeLists.txt  Makefile  README.md
server/core/: event_scheduler.cpp  event_scheduler.hpp  game_rules.hpp  types.hpp  world_state.cpp  world_state.hpp  world_state_events.hpp
server/net/: client.cpp  client.hpp  network_layer.cpp  network_layer.hpp
server/protocol/: ai_handler.cpp  ai_handler.hpp  gui_emitter.cpp  gui_emitter.hpp  gui_handler.cpp  gui_request_handler.cpp  gui_request_handler.hpp  handshake.cpp  handshake.hpp
server/runtime/: args.cpp  args.hpp  limits.hpp  main.cpp  parse_args.cpp  server.cpp  server.hpp  server_commands.cpp
server/tests/: test_event_scheduler.cpp  test_game_rules.cpp  test_handshake.cpp  test_network.cpp  test_parse_args.cpp  test_protocol_ai.cpp  test_protocol_gui.cpp  test_world_state.cpp
sim_python/: CMakeLists.txt  README.md
sim_python/src/: zappy_sim_pybind.cpp
sim_python/tests/: test_smoke.py
tests/integration_yaml/: scenario_basic_game.yaml
tools/: fake_ai.py  format_all.sh  run_integration.py  run_integration.sh  run_stress.sh  test_connection_limits.py
